--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
+    "generate": "node scripts/generate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
